--- a/TagSystemViewer/App.axaml
+++ b/TagSystemViewer/App.axaml
@@ -6,16 +6,22 @@
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
-             <Application.Resources>
-                 <converters:BoolEnumConvertor x:Key="BoolEnumConvertor" />
-                 <converters:TagsToThumbnailsConverter x:Key="ThumbnailConverter" />
-             </Application.Resources>
-             <Application.DataTemplates>
+     <Application.Resources>
+         <ResourceDictionary>
+             <converters:BoolEnumConvertor x:Key="BoolEnumConvertor" />
+             <converters:TagsToThumbnailsConverter x:Key="ThumbnailConverter" />
+         </ResourceDictionary>
+     </Application.Resources>
+    <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
   
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="avares://AsyncImageLoader.Avalonia/AdvancedImage.axaml" />
+        <StyleInclude Source="/Controls/WrapListBox.axaml"/>
+        <StyleInclude Source="/Controls/TagGrid.axaml"/>
+        <StyleInclude Source="/Styles/Styles.axaml"/>
+        
     </Application.Styles>
 </Application>
