--- a/TagSystemViewer/Views/TagGridEditor.axaml
+++ b/TagSystemViewer/Views/TagGridEditor.axaml
@@ -2,20 +2,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:TagSystemViewer.Views"
         xmlns:viewModels="clr-namespace:TagSystemViewer.ViewModels"
         xmlns:controls="clr-namespace:TagSystemViewer.Controls"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="TagSystemViewer.Views.MainWindow"
+        x:Class="TagSystemViewer.Views.TagGridEditor"
         Icon="/Assets/avalonia-logo.ico"
         Title="LocalTagSystem">
 
   <Design.DataContext>
-    <viewModels:MainWindowViewModel/>
+    <viewModels:TagEditorViewModel/>
   </Design.DataContext>
-  <Window.Styles>
-    <StyleInclude Source="/Controls/TagGrid.axaml"/>
-  </Window.Styles>
     <Grid RowDefinitions="9*, 1*">
     <Grid ColumnDefinitions="1*,1*,1*,1*" RowDefinitions="9*,1*">
       <controls:TagGrid Grid.Row="0" Grid.Column="0" Text="Усі" ItemsSource="{Binding Tags}"
@@ -41,13 +37,13 @@
         <DockPanel Grid.Row="1">
             <WrapPanel DockPanel.Dock="Left" Orientation="Horizontal">
                 <TextBox Text="{Binding NewName}"/>
-                <Button Content="Add" Command="{Binding AddCurrentToAdds}"/>
-                <Button Content="Update" Command="{Binding AddCurrentToUpdates}"/>
+                <Button Classes="Add" Command="{Binding AddCurrentToAdds}"/>
+                <Button Classes="Update" Command="{Binding AddCurrentToUpdates}"/>
             </WrapPanel>
             <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
-                <Button Content="Refresh" Command="{Binding ReadTags}"/>
-                <Button Content="Cancel" Command="{Binding $parent[Window].Close}"/>
-                <Button Content="Confirm" Command="{Binding Confirm}"/>
+                <Button Classes="Refresh" Command="{Binding ReadTags}"/>
+                <Button Classes="Cancel" Command="{Binding $parent[Window].Close}"/>
+                <Button Classes="Confirm" Command="{Binding Confirm}"/>
             </StackPanel>
             <TextBlock/>
         </DockPanel>
