--- a/TagSystemViewer/Views/UrlViewer.axaml
+++ b/TagSystemViewer/Views/UrlViewer.axaml
@@ -2,7 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:TagSystemViewer.Views"
         xmlns:models="clr-namespace:TagSystemViewer.Models"
         xmlns:viewModels="clr-namespace:TagSystemViewer.ViewModels"
         xmlns:controls="clr-namespace:TagSystemViewer.Controls"
@@ -18,9 +17,9 @@
                         <controls:TagsInputSearch Grid.Column="0" 
                                                DataContext="{Binding UrlSearchViewModel}"/>
                         <StackPanel Grid.Column="1" Orientation="Horizontal">
-                                <Button Content="Search" Command="{Binding SearchUrls}"/>
-                                <Button Content="Manage tags" Click="OpenTagWindow"/>
-                                <Button Content="Manage urls" Click="OpenUrlWindow"/>
+                                <Button Classes="Search" Command="{Binding SearchUrls}"/>
+                                <Button Classes="ManageTags" Click="OpenTagWindow"/>
+                                <Button Classes="ManageUrls" Click="OpenUrlWindow"/>
                         </StackPanel>
                         
                 </Grid>
